--- a/FinalDataBuildingFile.ipynb
+++ b/FinalDataBuildingFile.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,18 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#data is all of the chart text\n",
     "data = soup.find_all('table')[0].get_text()\n",
+    "\n",
+    "#new data is the data split up\n",
     "newdata = data.split('\\n')\n",
     "\n",
+    "#removes space characters\n",
     "for count in range(newdata.count('')):\n",
     "    newdata.remove('')\n",
-    "    \n",
+    "\n",
+    "#new data is now just the change data\n",
     "newdata = newdata[1:]\n",
     "\n",
+    "#genres accumulates the list of genere names\n",
     "genres=[]\n",
     "for index in range(len(newdata)):\n",
     "    if (index % 6)==1:\n",
@@ -63,10 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#modifies genre names so that they can work in url strings\n",
     "newgenre=genres[:8]\n",
     "for i in range(len(newgenre)):\n",
     "    if newgenre[i] == 'Thriller/Suspense': \n",
@@ -81,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,39 +118,20 @@
     "        datapoint=float(data[2][:4])\n",
     "        datalist.append(datapoint/100)\n",
     "    \n",
-    "    dl.append(datalist)\n",
-    "\n",
-    "#number of movies produced\n",
-    "dlnummade=[]\n",
-    "for genre in newgenre:\n",
-    "    url='https://www.the-numbers.com/market/genre/'+genre\n",
-    "    html = requests.get(url).content\n",
-    "    soup = BeautifulSoup(html,'lxml')\n",
-    "    p2text = soup.find_all('table')[1].get_text()\n",
-    "    makesomepoints= p2text.split('\\n')\n",
-    "\n",
-    "    for x in range(makesomepoints.count('')):\n",
-    "        makesomepoints.remove('')\n",
-    "\n",
-    "    tabledata = makesomepoints[1:]\n",
-    "    pointsingenre=[]\n",
-    "\n",
-    "    for s in range(len(tabledata)):\n",
-    "        if s%8==1:\n",
-    "            pointsingenre.append(tabledata[s])\n",
-    "    dlnummade.append(pointsingenre)"
+    "    dl.append(datalist)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 116,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "newdata=pd.DataFrame()\n",
-    "#append market share\n",
+    "\n",
+    "#adding market share to dataframe\n",
     "index = 0\n",
     "for thegenre in newgenre:\n",
     "    if len(dl[index])!=26:\n",
@@ -153,17 +141,57 @@
     "if len(newdata)!=24:\n",
     "    newdata = newdata.iloc[:-2]\n",
     "\n",
+    "#adding an \"other\" column in data frame\n",
     "other=[]\n",
-    "for x in list(range(1995,2019)):\n",
-    "    other.append(1-final_data.loc[x][:8].sum())\n",
-    "newdata[\"Other Genres Market Share\"] = other\n",
-    "    \n",
+    "for x in list(range(2019-1995)):\n",
+    "    other.append(1-newdata.loc[x][:8].sum())\n",
+    "newdata[\"Other Genres Market Share\"] = other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#total tickets produced\n",
+    "ttldl=[]\n",
+    "url = 'https://www.the-numbers.com/graphs/market/selected-item/genres/genre/genres/Adventure/Adventure#_ABSTRACT_RENDERER_ID_0'\n",
+    "html = requests.get(url).content\n",
+    "soup = BeautifulSoup(html,'lxml')\n",
+    "soup.find_all('script')[1].get_text()\n",
+    "\n",
+    "ttltext =soup.find_all('script')[1].get_text()\n",
+    "ttlnewtext = ttltext.split(';')\n",
+    "ttltwotext = ttlnewtext[2].split('\\t')\n",
+    "\n",
+    "for count in range(ttltwotext.count('')):\n",
+    "    ttltwotext.remove('')\n",
+    "\n",
+    "ttlthreetext = ttltwotext[3][1:].split(', ')\n",
+    "\n",
+    "for index in range(len(ttlthreetext)):\n",
+    "    ttldata = ttlthreetext[index].split(',')\n",
+    "    ttldatapoint=float(ttldata[1])\n",
+    "    ttldl.append('{:.0f}'.format(ttldatapoint))\n",
+    "\n",
+    "newdata['Total Tickets'] = ttldl[:len(newdata)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#GDP data\n",
     "gdp = pd.read_csv(\"gdp.csv\")[(1995-1961):]\n",
     "gdp.reset_index(inplace=True)\n",
     "newdata['GDP % Growth']= gdp[' GDP Growth (%)']\n",
     "#newdata['% GDP Annual Change']= gdp[' Annual Change']\n",
     "\n",
     "\n",
+    "#adding income\n",
     "inctitle='% Income Annual Change, Chained Dollars'\n",
     "income = pd.read_csv(\"income.csv\")\n",
     "incomedata=[]\n",
@@ -176,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -218,6 +246,7 @@
        "      <th>Romantic-Comedy Market Share</th>\n",
        "      <th>Musical Market Share</th>\n",
        "      <th>Other Genres Market Share</th>\n",
+       "      <th>Total Tickets</th>\n",
        "      <th>GDP % Growth</th>\n",
        "      <th>% Income Annual Change, Chained Dollars</th>\n",
        "    </tr>\n",
@@ -234,6 +263,7 @@
        "      <td>0.0559</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0282</td>\n",
+       "      <td>1221689691</td>\n",
        "      <td>2.6843</td>\n",
        "      <td>3.3</td>\n",
        "    </tr>\n",
@@ -248,6 +278,7 @@
        "      <td>0.0740</td>\n",
        "      <td>0.0004</td>\n",
        "      <td>0.0050</td>\n",
+       "      <td>1305169274</td>\n",
        "      <td>3.7725</td>\n",
        "      <td>3.2</td>\n",
        "    </tr>\n",
@@ -262,6 +293,7 @@
        "      <td>0.0467</td>\n",
        "      <td>0.0179</td>\n",
        "      <td>0.0113</td>\n",
+       "      <td>1385218935</td>\n",
        "      <td>4.4472</td>\n",
        "      <td>3.7</td>\n",
        "    </tr>\n",
@@ -276,6 +308,7 @@
        "      <td>0.0739</td>\n",
        "      <td>0.0099</td>\n",
        "      <td>0.0242</td>\n",
+       "      <td>1443827003</td>\n",
        "      <td>4.4814</td>\n",
        "      <td>5.9</td>\n",
        "    </tr>\n",
@@ -290,6 +323,7 @@
        "      <td>0.0984</td>\n",
        "      <td>0.0032</td>\n",
        "      <td>0.0291</td>\n",
+       "      <td>1444664086</td>\n",
        "      <td>4.7532</td>\n",
        "      <td>3.3</td>\n",
        "    </tr>\n",
@@ -304,6 +338,7 @@
        "      <td>0.0497</td>\n",
        "      <td>0.0123</td>\n",
        "      <td>0.0410</td>\n",
+       "      <td>1397460079</td>\n",
        "      <td>4.1275</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
@@ -318,6 +353,7 @@
        "      <td>0.0633</td>\n",
        "      <td>0.0083</td>\n",
        "      <td>0.0239</td>\n",
+       "      <td>1476216078</td>\n",
        "      <td>0.9983</td>\n",
        "      <td>2.7</td>\n",
        "    </tr>\n",
@@ -332,6 +368,7 @@
        "      <td>0.0627</td>\n",
        "      <td>0.0063</td>\n",
        "      <td>0.0205</td>\n",
+       "      <td>1575754768</td>\n",
        "      <td>1.7417</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
@@ -346,6 +383,7 @@
        "      <td>0.0542</td>\n",
        "      <td>0.0184</td>\n",
        "      <td>0.0298</td>\n",
+       "      <td>1524299815</td>\n",
        "      <td>2.8612</td>\n",
        "      <td>2.7</td>\n",
        "    </tr>\n",
@@ -360,6 +398,7 @@
        "      <td>0.0701</td>\n",
        "      <td>0.0024</td>\n",
        "      <td>0.0382</td>\n",
+       "      <td>1495647988</td>\n",
        "      <td>3.7989</td>\n",
        "      <td>3.3</td>\n",
        "    </tr>\n",
@@ -374,6 +413,7 @@
        "      <td>0.0500</td>\n",
        "      <td>0.0092</td>\n",
        "      <td>0.0223</td>\n",
+       "      <td>1373215640</td>\n",
        "      <td>3.5132</td>\n",
        "      <td>1.6</td>\n",
        "    </tr>\n",
@@ -388,6 +428,7 @@
        "      <td>0.0374</td>\n",
        "      <td>0.0074</td>\n",
        "      <td>0.0182</td>\n",
+       "      <td>1398738283</td>\n",
        "      <td>2.8550</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
@@ -402,6 +443,7 @@
        "      <td>0.0751</td>\n",
        "      <td>0.0261</td>\n",
        "      <td>0.0156</td>\n",
+       "      <td>1420036680</td>\n",
        "      <td>1.8762</td>\n",
        "      <td>2.3</td>\n",
        "    </tr>\n",
@@ -416,6 +458,7 @@
        "      <td>0.0339</td>\n",
        "      <td>0.0266</td>\n",
        "      <td>0.0285</td>\n",
+       "      <td>1358041408</td>\n",
        "      <td>-0.1366</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
@@ -430,6 +473,7 @@
        "      <td>0.0603</td>\n",
        "      <td>0.0036</td>\n",
        "      <td>0.0295</td>\n",
+       "      <td>1418567388</td>\n",
        "      <td>-2.5368</td>\n",
        "      <td>-0.2</td>\n",
        "    </tr>\n",
@@ -444,6 +488,7 @@
        "      <td>0.0493</td>\n",
        "      <td>0.0167</td>\n",
        "      <td>0.0268</td>\n",
+       "      <td>1328549023</td>\n",
        "      <td>2.5638</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
@@ -458,6 +503,7 @@
        "      <td>0.0568</td>\n",
        "      <td>0.0083</td>\n",
        "      <td>0.0319</td>\n",
+       "      <td>1282607161</td>\n",
        "      <td>1.5508</td>\n",
        "      <td>2.3</td>\n",
        "    </tr>\n",
@@ -472,6 +518,7 @@
        "      <td>0.0309</td>\n",
        "      <td>0.0200</td>\n",
        "      <td>0.0367</td>\n",
+       "      <td>1381105820</td>\n",
        "      <td>2.2495</td>\n",
        "      <td>3.3</td>\n",
        "    </tr>\n",
@@ -486,6 +533,7 @@
        "      <td>0.0181</td>\n",
        "      <td>0.0328</td>\n",
        "      <td>0.0454</td>\n",
+       "      <td>1339141772</td>\n",
        "      <td>1.8421</td>\n",
        "      <td>-1.3</td>\n",
        "    </tr>\n",
@@ -500,6 +548,7 @@
        "      <td>0.0257</td>\n",
        "      <td>0.0245</td>\n",
        "      <td>0.0297</td>\n",
+       "      <td>1257375344</td>\n",
        "      <td>2.4520</td>\n",
        "      <td>4.1</td>\n",
        "    </tr>\n",
@@ -514,6 +563,7 @@
        "      <td>0.0066</td>\n",
        "      <td>0.0061</td>\n",
        "      <td>0.0192</td>\n",
+       "      <td>1323093963</td>\n",
        "      <td>2.8809</td>\n",
        "      <td>4.1</td>\n",
        "    </tr>\n",
@@ -528,6 +578,7 @@
        "      <td>0.0121</td>\n",
        "      <td>0.0221</td>\n",
        "      <td>0.0268</td>\n",
+       "      <td>1301317181</td>\n",
        "      <td>1.5672</td>\n",
        "      <td>1.8</td>\n",
        "    </tr>\n",
@@ -542,6 +593,7 @@
        "      <td>0.0078</td>\n",
        "      <td>0.0809</td>\n",
        "      <td>0.0181</td>\n",
+       "      <td>1225554064</td>\n",
        "      <td>2.2170</td>\n",
        "      <td>2.9</td>\n",
        "    </tr>\n",
@@ -556,6 +608,7 @@
        "      <td>0.0201</td>\n",
        "      <td>0.0349</td>\n",
        "      <td>0.0252</td>\n",
+       "      <td>1310771801</td>\n",
        "      <td>2.8570</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
@@ -642,31 +695,31 @@
        "2017               0.0945                        0.0078                0.0809   \n",
        "2018               0.0754                        0.0201                0.0349   \n",
        "\n",
-       "      Other Genres Market Share  GDP % Growth  \\\n",
-       "1995                     0.0282        2.6843   \n",
-       "1996                     0.0050        3.7725   \n",
-       "1997                     0.0113        4.4472   \n",
-       "1998                     0.0242        4.4814   \n",
-       "1999                     0.0291        4.7532   \n",
-       "2000                     0.0410        4.1275   \n",
-       "2001                     0.0239        0.9983   \n",
-       "2002                     0.0205        1.7417   \n",
-       "2003                     0.0298        2.8612   \n",
-       "2004                     0.0382        3.7989   \n",
-       "2005                     0.0223        3.5132   \n",
-       "2006                     0.0182        2.8550   \n",
-       "2007                     0.0156        1.8762   \n",
-       "2008                     0.0285       -0.1366   \n",
-       "2009                     0.0295       -2.5368   \n",
-       "2010                     0.0268        2.5638   \n",
-       "2011                     0.0319        1.5508   \n",
-       "2012                     0.0367        2.2495   \n",
-       "2013                     0.0454        1.8421   \n",
-       "2014                     0.0297        2.4520   \n",
-       "2015                     0.0192        2.8809   \n",
-       "2016                     0.0268        1.5672   \n",
-       "2017                     0.0181        2.2170   \n",
-       "2018                     0.0252        2.8570   \n",
+       "      Other Genres Market Share Total Tickets  GDP % Growth  \\\n",
+       "1995                     0.0282    1221689691        2.6843   \n",
+       "1996                     0.0050    1305169274        3.7725   \n",
+       "1997                     0.0113    1385218935        4.4472   \n",
+       "1998                     0.0242    1443827003        4.4814   \n",
+       "1999                     0.0291    1444664086        4.7532   \n",
+       "2000                     0.0410    1397460079        4.1275   \n",
+       "2001                     0.0239    1476216078        0.9983   \n",
+       "2002                     0.0205    1575754768        1.7417   \n",
+       "2003                     0.0298    1524299815        2.8612   \n",
+       "2004                     0.0382    1495647988        3.7989   \n",
+       "2005                     0.0223    1373215640        3.5132   \n",
+       "2006                     0.0182    1398738283        2.8550   \n",
+       "2007                     0.0156    1420036680        1.8762   \n",
+       "2008                     0.0285    1358041408       -0.1366   \n",
+       "2009                     0.0295    1418567388       -2.5368   \n",
+       "2010                     0.0268    1328549023        2.5638   \n",
+       "2011                     0.0319    1282607161        1.5508   \n",
+       "2012                     0.0367    1381105820        2.2495   \n",
+       "2013                     0.0454    1339141772        1.8421   \n",
+       "2014                     0.0297    1257375344        2.4520   \n",
+       "2015                     0.0192    1323093963        2.8809   \n",
+       "2016                     0.0268    1301317181        1.5672   \n",
+       "2017                     0.0181    1225554064        2.2170   \n",
+       "2018                     0.0252    1310771801        2.8570   \n",
        "\n",
        "      % Income Annual Change, Chained Dollars  \n",
        "1995                                      3.3  \n",
@@ -695,7 +748,7 @@
        "2018                                      4.0  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
