--- a/TicketsSold-Income.ipynb
+++ b/TicketsSold-Income.ipynb
@@ -194,7 +194,7 @@
     }
    ],
    "source": [
-    "rsq = model.score(data[[\"Total Tickets\"]],data[\"% Income Annual Change, Chained Dollars\"])\n",
+    "rsq = model.score(data[[\"% Income Annual Change, Chained Dollars\"]],data[\"Total Tickets\"])\n",
     "print(\"R^2 Value of Correlation: \", rsq)"
    ]
   },
